--- a/res/xml/xosp_buttons_cat.xml
+++ b/res/xml/xosp_buttons_cat.xml
@@ -32,6 +32,12 @@
         android:defaultValue="false" />
 
     <SwitchPreference
+        android:key="double_tap_sleep_navbar"
+        android:title="@string/double_tap_sleep_nav_bar_title"
+        android:summary="@string/double_tap_sleep_nav_bar_summary"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="button_brightness"
         android:title="@string/hardware_brightness_keys_title"
         android:summary="@string/hardware_brightness_keys_summary"
