--- a/res/xml/xosp_buttons_cat.xml
+++ b/res/xml/xosp_buttons_cat.xml
@@ -31,6 +31,12 @@
         android:dependency="disable_nav_keys"
         android:defaultValue="false" />
 
+    <SwitchPreference
+        android:key="double_tap_sleep_navbar"
+        android:title="@string/double_tap_sleep_nav_bar_title"
+        android:summary="@string/double_tap_sleep_nav_bar_summary"
+        android:defaultValue="false" />
+
     <com.android.settings.xosp.ButtonBacklightBrightness
         android:key="button_backlight"
         android:title="@string/button_backlight_title"
