--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -14,9 +14,17 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen 
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res-auto"
         android:title="@string/about_settings">
+
+        <!-- XOSP Banner -->
+        <PreferenceScreen 
+            android:key="xosp_banner"
+            android:enabled="false"
+            android:selectable="false"
+            android:layout="@layout/xosp_banner" />
 
         <!-- System update settings - launches activity -->
         <PreferenceScreen android:key="system_update_settings"
