--- a/res/xml/xosp_buttons_cat.xml
+++ b/res/xml/xosp_buttons_cat.xml
@@ -25,6 +25,13 @@
         android:defaultValue="false" />
 
     <SwitchPreference
+        android:key="xosp_navbar_switch"
+        android:title="@string/xosp_navbar_switch_title"
+        android:summary="@string/xosp_navbar_switch_summary"
+        android:dependency="navigation_bar"
+        android:defaultValue="false" />
+
+    <SwitchPreference
         android:key="button_brightness"
         android:title="@string/hardware_brightness_keys_title"
         android:summary="@string/hardware_brightness_keys_summary"
