--- a/res/xml/xosp_statusbar_cat.xml
+++ b/res/xml/xosp_statusbar_cat.xml
@@ -15,64 +15,7 @@
 -->
 
 <PreferenceScreen
-    android:title="@string/status_bar_title"
+    android:title="@string/notification_drawer_title"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-    android:key="status_bar_settings">
-
-    <PreferenceScreen
-        android:key="status_bar_icons"
-        android:title="@string/status_bar_icons_title"
-        android:summary="@string/status_bar_icons_summary">
-        <intent
-            android:action="android.intent.action.MAIN"
-            android:targetPackage="com.android.systemui"
-            android:targetClass="com.android.systemui.tuner.TunerActivity">
-            <extra android:name="tuner" android:value="status_bar" />
-        </intent>
-    </PreferenceScreen>
-
-    <!-- Network traffic meter -->
-     <PreferenceCategory
-         android:key="category_network_traffic"
-         android:title="@string/network_traffic_title">
-
-         <ListPreference
-             android:key="network_traffic_state"
-             android:title="@string/show_network_traffic_state"
-             android:entries="@array/show_network_traffic_state_entries"
-             android:entryValues="@array/show_network_traffic_state_values"
-             android:persistent="false" />
-
-         <ListPreference
-             android:key="network_traffic_unit"
-             android:title="@string/show_network_traffic_unit"
-             android:entries="@array/show_network_traffic_unit_entries"
-             android:entryValues="@array/show_network_traffic_unit_values"
-             android:persistent="false" />
-
-         <ListPreference
-             android:key="network_traffic_period"
-             android:title="@string/show_network_traffic_frequency"
-             android:entries="@array/show_network_traffic_frequency_entries"
-             android:entryValues="@array/show_network_traffic_frequency_values"
-             android:persistent="false" />
-
-         <SwitchPreference
-             android:key="network_traffic_autohide"
-             android:title="@string/network_traffic_autohide_title"
-             android:summary="@string/network_traffic_autohide_summary"
-             android:defaultValue="false"/>
-
-         <com.android.settings.xosp.CustomSeekBarPreference
-             android:key="network_traffic_autohide_threshold"
-             android:title="@string/network_traffic_autohide_threshold"
-             settings:max="100"
-             settings:min="0"
-             settings:units="kB/s"
-             android:dependency="network_traffic_autohide"
-             android:persistent="false" />
-
-     </PreferenceCategory>
-
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 </PreferenceScreen>
