--- a/res/values/xosp_colors.xml
+++ b/res/values/xosp_colors.xml
@@ -19,7 +19,7 @@
 	<!-- Palette colors referenced by top-level themes. -->
     <color name ="theme_primary">@color/xosp_blue_palette_100</color>
     <color name="theme_primary_dark">@color/xosp_blue_palette_200</color>
-    <color name="theme_accent">@color/xosp_midnight_palette_500</color>
+    <color name="theme_accent">@*android:color/xosp_midnight_palette_700</color>
 
     <!-- XOSP Palette colors -->
     <color name="xosp_blue_palette_50">#1dacff</color>
